# DCC019-LP2

./: .gitignore  README.md  criptogame.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: CompActions.hs  Main.hs  PrintParse.hs  Types.hs
