name:                criptogame
version:             1
synopsis:            criptogame trabalho lp
description:         README.md
license:             BSD3
license-file:        LICENSE
author:              Daniel Machado e Gabriel Bronte
maintainer:          Daniel Machado e Gabriel Bronte
copyright:           -
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable criptogame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       CompActions
                     , PrintParse
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , random
